--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -20,12 +20,17 @@
     "@nestjs/config": "^0.5.0",
     "@nestjs/core": "^7.0.0",
     "@nestjs/graphql": "^7.0.0",
+    "@nestjs/jwt": "^7.0.0",
     "@nestjs/mongoose": "^7.0.1",
+    "@nestjs/passport": "^7.0.0",
     "@nestjs/platform-express": "^7.0.0",
     "apollo-server-express": "^2.13.1",
+    "bcryptjs": "^2.4.3",
     "graphql": "^15.0.0",
     "graphql-tools": "^6.0.1",
     "mongoose": "^5.9.16",
+    "passport-jwt": "^4.0.0",
+    "passport": "^0.4.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.5.4"
